v10.4.0/_sources/generated/pcdsdevices.spectrometer.Mono.rst.txt
pcdsdevices.spectrometer.Mono
=============================

.. currentmodule:: pcdsdevices.spectrometer

.. autoclass:: Mono

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - lightpath_summary
          - :class:`~pcdsdevices.signal.SummarySignal`
          - 
          - 
          - omitted
          - Inherited from :class:`~pcdsdevices.interface.LightpathMixin`
    
        * - grating_states
          - :class:`~pcdsdevices.spectrometer.MonoGratingStates`
          - ``:GRATING:STATE``
          - mono grating states g_h
          - normal
          - 
    
        * - m_pi
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:M_PI``
          - mirror pitch [urad]
          - normal
          - 
    
        * - g_pi
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:G_PI``
          - grating pitch [urad]
          - normal
          - 
    
        * - m_h
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:M_H``
          - mirror horizontal [um]
          - normal
          - 
    
        * - g_h
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:G_H``
          - grating horizontal [um]
          - normal
          - 
    
        * - sd_v
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:SD_V``
          - screwdriver vertical (in/out) [um]
          - normal
          - 
    
        * - sd_rot
          - :class:`~pcdsdevices.epics_motor.BeckhoffAxisNoOffset`
          - ``:MMS:SD_ROT``
          - screwdriver rotation [urad]
          - normal
          - 
    
        * - m_pi_up_enc
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:M_PI:02``
          - mirror pitch upstream encoder [urad]
          - omitted
          - 
    
        * - g_pi_up_enc
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:ENC:G_PI:02``
          - grating pitch upstream encoder [urad]
          - omitted
          - 
    
        * - m_pi_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:MMS:M_PI:ENCDIFF:STATS:RMS``
          - mirror pitch encoder RMS deviation [nrad]
          - normal
          - 
    
        * - g_pi_enc_rms
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:MMS:G_PI:ENCDIFF:STATS:RMS``
          - grating pitch encoder RMS deviation [nrad]
          - normal
          - 
    
        * - led_power_1
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:LED:01:PWR``
          - LED power supply controls.
          - config
          - 
    
        * - led_power_2
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:LED:02:PWR``
          - LED power supply controls.
          - config
          - 
    
        * - led_power_3
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:LED:03:PWR``
          - LED power supply controls.
          - config
          - 
    
        * - cool_flow1
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:FWM:1``
          - flow meter 1
          - normal
          - 
    
        * - cool_flow2
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:FWM:2``
          - flow meter 2
          - normal
          - 
    
        * - cool_press
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:PRSM:1``
          - pressure meter 1
          - normal
          - 
    
        * - grating_temp_1
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:01:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_temp_2
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:02:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_temp_3
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:03:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_temp_4
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:04:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_mask_temp_1
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:05:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_mask_temp_2
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:06:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_mask_temp_3
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:07:TEMP``
          - [deg C]
          - normal
          - 
    
        * - grating_mask_temp_4
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:08:TEMP``
          - [deg C]
          - normal
          - 
    
        * - mirror_mask_temp
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:09:TEMP``
          - [deg C]
          - normal
          - 
    
        * - mirror_cooling_temp
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:11:TEMP``
          - [deg C]
          - normal
          - 
    
        * - exit_mask_right_temp
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:10:TEMP``
          - [deg C]
          - normal
          - 
    
        * - exit_mask_left_temp
          - :class:`~pcdsdevices.signal.PytmcSignal`
          - ``:RTD:12:TEMP``
          - [deg C]
          - normal
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: calc_lightpath_state
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: get_lightpath_state
    .. automethod:: post_elog_status
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: screen
    .. automethod:: set_defaults
    .. automethod:: stage_group_instances
    .. automethod:: status
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: connection_timeout
    .. autoattribute:: hints
    .. autoattribute:: kind
    .. autoattribute:: lightpath_cpts
    .. autoattribute:: md
    .. autoattribute:: needs_parent
    .. autoattribute:: stage_group
    .. autoattribute:: subscriptions
    .. autoattribute:: transmission
    
    